[tool.poetry]
name = "meme-storage"
version = "0.1.0"
description = ""
authors = ["Adam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
openai = "^1.23.6"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
streamlit = "^1.33.0"
slack-sdk = "^3.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
